# ccid-utils

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.in  doxy.conf  ins.db  setup.py  sw.db  usb-ccid-devices
include/: autober.h  ber.h  bytesex.h  ccid-spec.h  ccid.h  compiler.h  emv.h  gang.h  gber.h  list.h  mpool.h  sim.h
src/: Makefile.am  adf_fci.c  adf_fci.h  autober.c  ber.c  ber.py  ber_decode.c  ca_pubkeys.h  cc_contact.c  cci-msg.c  cci.c  cci_contact.c  cci_rfid.c  ccid-internal.h  ccid-sh  ccid-sh.in  ccid-util  ccid.c  ccidev.c  chipcard.c  clrc632-regs.h  clrc632.c  clrc632.h  cselect.c  dev.c  emv-internal.h  emv.c  emv_apdu.c  emv_applet.py  emv_appsel.c  emv_cvm.c  emv_data.c  emv_dda.c  emv_err.c  emv_init.c  emv_sda.c  emv_trm.c  emvtool.c  gang.c  gemv  (+33 more)
