dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(ccid-utils, 0.1)
AM_CONFIG_HEADER(include/config.h)
dnl
AM_DISABLE_STATIC
AC_LIBTOOL_DLOPEN
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
dnl
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
dnl
dnl Set nice cflags if we are using gcc
if test -n "$GCC"; then
	CFLAGS="${CFLAGS} -Wall -pipe"
fi
dnl
PYTHON_LDADD=""
if python-config --prefix > /dev/null; then
	echo "checking for python CFLAGS... `python-config --cflags`"
	CFLAGS="${CFLAGS} `python-config --cflags`"
	echo "checking for python LDFLAGS... `python-config --ldflags`"
	PYTHON_LDADD="`python-config --ldflags`"
fi
AC_SUBST(PYTHON_LDADD)
AC_OUTPUT([
Makefile
src/Makefile
])
