dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(ccid-utils, 0.3)
AM_CONFIG_HEADER(include/config.h)
dnl
AM_DISABLE_STATIC
AC_LIBTOOL_DLOPEN
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
dnl
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
dnl
dnl Set nice cflags if we are using gcc
if test -n "$GCC"; then
	CFLAGS="${CFLAGS} -Wall -pipe"
fi
dnl
LIBUSB_LDADD=""
usbmod="libusb-1.0"
if pkg-config $usbmod --modversion > /dev/null; then
	echo "checking for libusb CFLAGS... `pkg-config $usbmod --cflags`"
	CFLAGS="${CFLAGS} `pkg-config --cflags $usbmod`"
	echo "checking for python LDFLAGS... `pkg-config $usbmod --libs`"
	LIBUSB_LDADD="`pkg-config --libs $usbmod`"
	AC_SUBST(LIBUSB_LDADD)
else
	echo "*** ERROR: $usbmod required"
	exit 1
fi
dnl
AC_OUTPUT([
Makefile
src/Makefile
])
