dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(ccid-utils, 0.3)
AM_CONFIG_HEADER(include/config.h)
dnl
AM_DISABLE_STATIC
AC_LIBTOOL_DLOPEN
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
dnl
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
dnl
dnl @synopsis AC_DEFINE_DIR(VARNAME, DIR [, DESCRIPTION])
dnl
dnl This macro sets VARNAME to the expansion of the DIR variable,
dnl taking care of fixing up ${prefix} and such.
dnl
dnl VARNAME is then offered as both an output variable and a C
dnl preprocessor symbol.
dnl
dnl Example:
dnl
dnl    AC_DEFINE_DIR([DATADIR], [datadir], [Where data are placed to.])
dnl
dnl @category Misc
dnl @author Stepan Kasal <kasal@ucw.cz>
dnl @author Andreas Schwab <schwab@suse.de>
dnl @author Guido U. Draheim <guidod@gmx.de>
dnl @author Alexandre Oliva
dnl @version 2006-10-13
dnl @license AllPermissive

AC_DEFUN([AC_DEFINE_DIR], [
  prefix_NONE=
  exec_prefix_NONE=
  test "x$prefix" = xNONE && prefix_NONE=yes && prefix=$ac_default_prefix
  test "x$exec_prefix" = xNONE && exec_prefix_NONE=yes && exec_prefix=$prefix
dnl In Autoconf 2.60, ${datadir} refers to ${datarootdir}, which in turn
dnl refers to ${prefix}.  Thus we have to use `eval' twice.
  eval ac_define_dir="\"[$]$2\""
  eval ac_define_dir="\"$ac_define_dir\""
  AC_SUBST($1, "$ac_define_dir")
  AC_DEFINE_UNQUOTED($1, "$ac_define_dir", [$3])
  test "$prefix_NONE" && prefix=NONE
  test "$exec_prefix_NONE" && exec_prefix=NONE
])
AC_DEFINE_DIR([CCID_UTILS_DATADIR], [datarootdir], [Where data are placed to.])
AH_TEMPLATE([CCID_UTILS_DATADIR], [Data directory])
dnl
dnl Set nice cflags if we are using gcc
if test -n "$GCC"; then
	CFLAGS="${CFLAGS} -Wall -pipe"
fi
dnl
LIBUSB_LDADD=""
usbmod="libusb-1.0"
if pkg-config $usbmod --modversion > /dev/null; then
	echo "checking for libusb CFLAGS... `pkg-config $usbmod --cflags`"
	CFLAGS="${CFLAGS} `pkg-config --cflags $usbmod`"
	echo "checking for python LDFLAGS... `pkg-config $usbmod --libs`"
	LIBUSB_LDADD="`pkg-config --libs $usbmod`"
	AC_SUBST(LIBUSB_LDADD)
else
	echo "*** ERROR: $usbmod required"
	exit 1
fi
dnl
AC_OUTPUT([
Makefile
src/Makefile
src/gemv
src/ccid-sh
])
